--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,8 @@
-version: 2.0
+version: 2.1
   jobs:
     build:
       docker: 
         - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
       steps:
         - checkout # check out the code in the project directory
-        - restore_cache:
-            name: Restore Yarn Package Cache
-            keys:
-              - yarn-packages-{{ checksum "yarn.lock" }}
-        - run:
-            name: Install Dependencies
-            command: yarn install
-        - run:
-            name: Run Tests
-            command: yarn test
-        - save_cache:
-            name: Save Yarn Package Cache
-            key: yarn-packages-{{ checksum "yarn.lock" }}
-            paths:
-              - ~/.cache/yarn
+        - run: echo "hello world" # run the `echo` command
