--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker: 
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+      - image: circleci/node:10.0.0 # for the CircleCI "Convenience" image
     steps:
       - checkout # check out the code in the project directory
       - restore_cache:
